Theming: product detail > sample downloads

--- a/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.Misc.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/Partials/Product.Offer.Actions.Misc.cshtml
@@ -6,6 +6,17 @@
 @{
 	var miscActions = new Dictionary<string, RouteValueDictionary>();
 
+	if (Model.HasSampleDownload)
+	{
+		miscActions["sample"] = new RouteValueDictionary(new
+		{
+			title = T("Products.DownloadSample").Text,
+			icon = "fa fa-download",
+			@class = "action-download-sample",
+			href = Url.Action("Sample", "Download", new { id = Model.Id })
+		});
+	}
+
 	if (!Model.AddToCart.DisableWishlistButton)
 	{
 		miscActions["wishlist"] = new RouteValueDictionary(new
