Theming: handle panning/swiping in offcanvas properly

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/_shopbar.scss
@@ -91,7 +91,7 @@
         font-size: 10px;
         line-height: 1.3;
         vertical-align: middle;
-        white-space: normal;
+        white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
     }
