--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_offcanvas.scss
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/shared/_offcanvas.scss
@@ -48,60 +48,14 @@ body.canvas-noscroll {
 }
 
 
-/* HAMBURGER
+/* TOGGLER
 --------------------------------------------*/
 
 .navbar-toggler {
     position: relative;
     background-color: transparent;
-    /*
-    width: 3.2rem;
-    height: 3.2rem;
-        */
     outline: none;
     &:focus { outline: none }
-}
-
-.navbar-toggler .hamburger {
-    display: block;
-    position: relative;
-    margin: 0 auto;
-
-    &, &:before, &:after {
-        background-color: #fff;
-        width: 1.6rem;
-        height: 3px;
-        border-radius: 1px;
-        transition: background-color $offcanvas-duration $offcanvas-easing,
-                    transform $offcanvas-duration $offcanvas-easing;
-    }
-
-    &:before, &:after {
-        display: block;
-        content: '';
-        position: absolute;
-        opacity: 1 !important;
-    }
-    &:before {
-        top: 8px;
-    }
-    &:after {
-        top: -8px;
-    }
-
-    .navbar-light &, .navbar-light &:before, .navbar-light &:after {
-        background-color: $body-color;
-    }
-
-    .canvas-sliding & {
-        background-color: transparent !important;
-        &:before {
-            transform: translate3d(0, -8px, 0) rotate(45deg);
-        }
-        &:after {
-            transform: translate3d(0, 8px, 0) rotate(-45deg);
-        }
-    }
 }
 
 
@@ -165,12 +119,6 @@ body.canvas-blocking .canvas-blocker {
         width: 100%;
     }
 
-    &.on {
-        visibility: visible;
-        transition: transform $offcanvas-duration $offcanvas-easing;
-        transform: translate3d(0, 0, 0) !important;
-    }
-
     &.offcanvas-push,
     &.offcanvas-overlay {
         transform: translate3d(-100%, 0, 0);
@@ -195,6 +143,16 @@ body.canvas-blocking .canvas-blocker {
     @media (max-width: $offcanvas-width-lg) {
         &.offcanvas-lg { width: 100%; }
     }
+
+    &.offcanvas-push.on,
+    &.offcanvas-overlay.on,
+    &.offcanvas-right.on,
+    &.on {
+        // specificity: we want to prevent "!important" here
+        visibility: visible;
+        transition: transform $offcanvas-duration $offcanvas-easing;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 .offcanvas-content {
@@ -203,6 +161,11 @@ body.canvas-blocking .canvas-blocker {
     height: 100%;
     overflow-x: hidden;
     overflow-y: auto;
+
+    * {
+        // Fixes Chrome 55+ pan/swipe bug
+        touch-action: pan-y;
+    }
 }
 
 
