--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -436,7 +436,7 @@
 
 		// edit plugin
 		$('#plugins-form').on('click', '.plugin-edit', function (e) {
-			OpenPopup(
+			openPopup(
                 '{0}?systemName={1}&btnId=btnRefresh&formId=plugins-form'.format(
                     '@Url.Content("~/Admin/Plugin/EditPopup")',
                     $(this).data("systemname")
