--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminLayout.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Layouts/_AdminLayout.cshtml
@@ -19,7 +19,7 @@
 
 		@if (!(ViewBag.CloseWindow == false))
 		{
-			<text>window.parent.ClosePopup();</text>
+			<text>window.parent.closePopup();</text>
 		}	
 	</script>
 }
