--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/Partials/_Providers.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/Partials/_Providers.cshtml
@@ -128,7 +128,7 @@
 	$(function () {
 		$('.module-list').on('click', '.module-edit', function (e) {
 			e.preventDefault();
-			OpenPopup($(this).attr("href"));
+			openPopup($(this).attr("href"));
 			return false;
 		});
 
