--- a/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Pager.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Partials/Product.List.Pager.cshtml
@@ -4,10 +4,6 @@
 
 @{ 
 	var pageable = Model.PagedList;
-	if (pageable.TotalPages <= 1)
-	{
-		return;
-	}
 }
 
 @functions
@@ -48,59 +44,12 @@
 	}
 }
 
-<div class="artlist-action artlist-action--pager pull-xs-right clearfix">
-	@if (pageable.PageNumber > 1)
-	{
-		<a href='@ModifyUrl(null, "i=" + (pageable.PageNumber - 1))' class="btn btn-secondary btn-pager-prev pull-xs-left" data-toggle="tooltip" title="@T("Pager.PageX", pageable.PageNumber - 1)">
-			<i class="fa fa-chevron-left"></i>
-		</a>
-	}
-
-	<div class="mf-dropdown">
-		<button class="btn btn-secondary btn-artlist-action">
-			<em class="hidden-md-up"><span>@pageable.PageNumber</span>/<span>@pageable.TotalPages</span></em>
-			<em class="hidden-md-up hidden-sm-down">@T("Pager.PageXOfYShort", "<span>" + pageable.PageNumber + "</span>", "<span>" + pageable.TotalPages + "</span>")</em>
-			<em class="hidden-sm-down">@T("Pager.PageXOfY", "<span>" + pageable.PageNumber + "</span>", "<span>" + pageable.TotalPages + "</span>")</em>	
-			<i class="fa fa-caret-down"></i>
-		</button>
-		<select class="artlist-action-select form-control noskin" name="artlist-action-pagesize" id="artlist-action-pagesize" data-qname="i" title="@T("Pager.PageXOfY", pageable.PageNumber, pageable.TotalPages)">
-			@{ 
-				int pageCount = pageable.TotalPages;
-				int start = GetFirstPageIndex(pageable) + 1;
-				int end = GetLastPageIndex(pageable) + 1;
-			}
-			@if (start > 3)
-			{
-				<option value="1" @Html.Attr("selected", "selected", 1 == pageable.PageNumber)>Seite 1 von @pageCount</option>
-				<option disabled="disabled">...</option>
-			}
-			@for (var i = start; i <= end; i++)
-			{
-				<option value="@i" @Html.Attr("selected", "selected", i == pageable.PageNumber)>Seite @i von @pageCount</option>
-			}
-			@if (end < (pageCount - 3))
-			{
-				<option disabled="disabled">...</option>
-				<option value="@pageCount" @Html.Attr("selected", "selected", pageCount == pageable.PageNumber)>Seite @pageCount von @pageCount</option>
-			}
-		</select>
-	</div>
-
-	@if (pageable.PageNumber < pageable.TotalPages)
-	{
-		<a href='@ModifyUrl(null, "i=" + (pageable.PageNumber + 1))' class="btn btn-secondary btn-pager-next" data-toggle="tooltip" title="@T("Pager.PageX", pageable.PageNumber + 1)">
-			<i class="fa fa-chevron-right"></i>
-		</a>
-	}
-</div>
-
-
 @if (Model.AvailablePageSizes != null && Model.AvailablePageSizes.Count() > 1)
 {
-	<div class="artlist-action artlist-action--pagesize pull-xs-right">
+	<div class="artlist-action artlist-action--pagesize ml-auto">
 		<div class="mf-dropdown">
 			<button class="btn btn-secondary btn-artlist-action">
-				<em>@T("Pager.XPerPage", "<span>" + pageable.PageSize + "</span>")</em>	
+				<em>@T("Pager.XPerPage", "<span>" + pageable.PageSize + "</span>")</em>
 				<i class="fa fa-caret-down"></i>
 			</button>
 			<select class="artlist-action-select form-control noskin"
@@ -115,5 +64,54 @@
 				}
 			</select>
 		</div>
+	</div>
+}
+
+@if (pageable.TotalPages > 1)
+{
+	<div class="artlist-action artlist-action--pager">
+		@if (pageable.PageNumber > 1)
+		{
+			<a href='@ModifyUrl(null, "i=" + (pageable.PageNumber - 1))' class="btn btn-secondary btn-pager-prev pull-xs-left" data-toggle="tooltip" title="@T("Pager.PageX", pageable.PageNumber - 1)">
+				<i class="fa fa-chevron-left"></i>
+			</a>
+		}
+
+		<div class="mf-dropdown">
+			<button class="btn btn-secondary btn-artlist-action">
+				<em class="hidden-md-up"><span>@pageable.PageNumber</span>/<span>@pageable.TotalPages</span></em>
+				<em class="hidden-md-up hidden-sm-down">@T("Pager.PageXOfYShort", "<span>" + pageable.PageNumber + "</span>", "<span>" + pageable.TotalPages + "</span>")</em>
+				<em class="hidden-sm-down">@T("Pager.PageXOfY", "<span>" + pageable.PageNumber + "</span>", "<span>" + pageable.TotalPages + "</span>")</em>
+				<i class="fa fa-caret-down"></i>
+			</button>
+			<select class="artlist-action-select form-control noskin" name="artlist-action-pagesize" id="artlist-action-pagesize" data-qname="i" title="@T("Pager.PageXOfY", pageable.PageNumber, pageable.TotalPages)">
+				@{
+					int pageCount = pageable.TotalPages;
+					int start = GetFirstPageIndex(pageable) + 1;
+					int end = GetLastPageIndex(pageable) + 1;
+				}
+				@if (start > 3)
+				{
+					<option value="1" @Html.Attr("selected", "selected", 1 == pageable.PageNumber)>Seite 1 von @pageCount</option>
+					<option disabled="disabled">...</option>
+				}
+				@for (var i = start; i <= end; i++)
+				{
+					<option value="@i" @Html.Attr("selected", "selected", i == pageable.PageNumber)>Seite @i von @pageCount</option>
+				}
+				@if (end < (pageCount - 3))
+				{
+					<option disabled="disabled">...</option>
+					<option value="@pageCount" @Html.Attr("selected", "selected", pageCount == pageable.PageNumber)>Seite @pageCount von @pageCount</option>
+				}
+			</select>
+		</div>
+
+		@if (pageable.PageNumber < pageable.TotalPages)
+		{
+			<a href='@ModifyUrl(null, "i=" + (pageable.PageNumber + 1))' class="btn btn-secondary btn-pager-next" data-toggle="tooltip" title="@T("Pager.PageX", pageable.PageNumber + 1)">
+				<i class="fa fa-chevron-right"></i>
+			</a>
+		}
 	</div>
 }
