--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdateProductAttributeValue.cshtml
@@ -1,7 +1,6 @@
-﻿@model ProductModel.ProductVariantAttributeValueModel
-
-@using SmartStore.Core.Domain.Catalog;
+﻿@using SmartStore.Core.Domain.Catalog;
 @using Telerik.Web.Mvc.UI;
+@model ProductModel.ProductVariantAttributeValueModel
 
 @Html.ValidationSummary(false)
 @Html.HiddenFor(model => model.Id)
@@ -124,6 +123,15 @@
         </td>
     </tr>
     <tr>
+        <td class="adminTitle">
+            @Html.SmartLabelFor(model => model.Locales[item].Alias)
+        </td>
+        <td class="adminData">
+            @Html.EditorFor(model => Model.Locales[item].Alias)
+            @Html.ValidationMessageFor(model => model.Locales[item].Alias)
+        </td>
+    </tr>
+    <tr>
         <td colspan="2">
             @Html.HiddenFor(model => model.Locales[item].LanguageId)
         </td>
@@ -140,12 +148,6 @@
             @Html.ValidationMessageFor(model => model.Name)
         </td>
     </tr>
-</table>
-))
-
-@Html.HiddenFor(model => model.IsListTypeAttribute)
-
-<table class="adminContent">
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(model => model.Alias)
@@ -155,7 +157,12 @@
             @Html.ValidationMessageFor(model => model.Alias)
         </td>
     </tr>
+</table>
+))
 
+@Html.HiddenFor(model => model.IsListTypeAttribute)
+
+<table class="adminContent">
     @if (Model.IsListTypeAttribute)
     {
     <tr>
