DRY refactoring. Moved search alias validation from service classes to hook. We should not re-display entity creation page when a model state error occurred but the entity already has been created.

--- a/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/SpecificationAttribute/_CreateOrUpdate.cshtml
@@ -93,7 +93,7 @@
 				@Html.SmartLabelFor(model => model.FacetSorting)
 			</td>
 			<td class="adminData">
-				@Html.DropDownListFor(model => model.FacetSorting, Model.AvailableFacetSortings)
+				@Html.DropDownListFor(model => model.FacetSorting, Model.FacetSorting.ToSelectList().ToList())
 				@Html.ValidationMessageFor(model => model.FacetSorting)
 			</td>
 		</tr>
