--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/EditAttributeValues.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/EditAttributeValues.cshtml
@@ -19,54 +19,50 @@
     <tr>
         <td>
             @(Html.Telerik().Grid<ProductModel.ProductVariantAttributeValueModel>()
-                            .Name("pvav-grid")
-                            .DataKeys(x =>
-                            {
-                                x.Add(y => y.Id).RouteKey("pvavId");
-                                x.Add(y => y.ProductVariantAttributeId).RouteKey("productVariantAttributeId");
-                            })
-                            .Columns(columns =>
-                            {
-								columns.Bound(x => x.Name)
-									.ReadOnly()
-									.Template(x => @Html.VariantAttributeValueName(x))
-									.ClientTemplate(@Html.VariantAttributeValueName());
-								columns.Bound(x => x.Alias);
-								columns.Bound(x => x.LinkedProductName)
-									.ReadOnly()
-									.Template(x => @Html.LabeledProductName(x.LinkedProductId, x.LinkedProductName, x.LinkedProductTypeName, x.LinkedProductTypeLabelHint))
-									.ClientTemplate(@Html.LabeledProductName("LinkedProductId", "LinkedProductName", "LinkedProductTypeName", "LinkedProductTypeLabelHint"));
-                                columns.Bound(x => x.PriceAdjustmentString)
-                                    .Width(80)
-                                    .Centered();
-                                columns.Bound(x => x.WeightAdjustmentString)
-                                    .Width(80)
-                                    .Centered();
-                                columns.Bound(x => x.IsPreSelected)
-                                    .Width(80)
-                                    .Template(item => @Html.SymbolForBool(item.IsPreSelected))
-                                    .ClientTemplate(@Html.SymbolForBool("IsPreSelected"))
-                                    .Centered();
-                                columns.Bound(x => x.DisplayOrder)
-                                    .Width(80)
-                                    .Centered();
-                                columns.Bound(x => x.Id)
-                                    .Width(50)
-                                    .Centered()
-                                    .ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:openPopup('" + @Url.Content("~/Admin/Product/ProductAttributeValueEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=productvariantattribute-form'); return false;\" class='t-button' />")
-                                    .Title(T("Admin.Common.Edit").Text);
-                                columns.Command(commands =>
-                                {
-                                    commands.Delete().Localize(T);
-                                })
-                                .Width(50)
-                                .Title(T("Admin.Common.Delete").Text);
-                            })
-                            .DataBinding(dataBinding =>
-                                dataBinding.Ajax()
-                                .Select("ProductAttributeValueList", "Product", new { productVariantAttributeId = Model.ProductVariantAttributeId })
-                                .Delete("ProductAttributeValueDelete", "Product"))
-                            .EnableCustomBinding(true))
+				.Name("pvav-grid")
+				.DataKeys(x =>
+				{
+					x.Add(y => y.Id).RouteKey("pvavId");
+					x.Add(y => y.ProductVariantAttributeId).RouteKey("productVariantAttributeId");
+				})
+				.Columns(columns =>
+				{
+					columns.Bound(x => x.Name)
+						.ReadOnly()
+						.ClientTemplate(@Html.VariantAttributeValueName());
+					columns.Bound(x => x.Alias);
+					columns.Bound(x => x.LinkedProductName)
+						.ReadOnly()
+						.ClientTemplate(@Html.LabeledProductName("LinkedProductId", "LinkedProductName", "LinkedProductTypeName", "LinkedProductTypeLabelHint"));
+					columns.Bound(x => x.PriceAdjustmentString)
+						.Width(80)
+						.Centered();
+					columns.Bound(x => x.WeightAdjustmentString)
+						.Width(80)
+						.Centered();
+					columns.Bound(x => x.IsPreSelected)
+						.Width(80)
+						.ClientTemplate(@Html.SymbolForBool("IsPreSelected"))
+						.Centered();
+					columns.Bound(x => x.DisplayOrder)
+						.Width(80)
+						.Centered();
+					columns.Bound(x => x.Id)
+						.Width(50)
+						.Centered()
+						.ClientTemplate("<input type='submit' value='" + @T("Admin.Common.Edit").Text + "' onclick=\"" + "javascript:openPopup('" + @Url.Content("~/Admin/Product/ProductAttributeValueEditPopup/") + "<#= Id #>?btnId=btnRefresh&formId=productvariantattribute-form'); return false;\" class='t-button' />")
+						.Title(T("Admin.Common.Edit").Text);
+					columns.Command(commands =>
+					{
+						commands.Delete().Localize(T);
+					})
+					.Width(50)
+					.Title(T("Admin.Common.Delete").Text);
+				})
+				.DataBinding(dataBinding => dataBinding.Ajax()
+					.Select("ProductAttributeValueList", "Product", new { productVariantAttributeId = Model.ProductVariantAttributeId })
+					.Delete("ProductAttributeValueDelete", "Product"))
+				.EnableCustomBinding(true))
         </td>
     </tr>
     <tr>
