--- a/src/Presentation/SmartStore.Web/Views/Search/InstantSearch.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Search/InstantSearch.cshtml
@@ -21,7 +21,7 @@
 
 @if (isMultiCol)
 {
-	<div class="row no-space instasearch-row">
+	<div class="row no-gutters instasearch-row">
 		<div class="col-xs-12 col-sm-6 col-xl-5 instasearch-col">
 			@foreach (var group in hitGroups)
             {
