--- a/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/Layouts/_Document.cshtml
@@ -35,6 +35,9 @@
 		"~/Scripts/jquery-ui/effect-transfer.js",
 		"~/Scripts/jquery-ui/effect-shake.js",
 		"~/Scripts/jquery-ui/position.js",
+		// Touch events
+		jsRoot + "hammer.js",
+		jsRoot + "jquery.hammer.js",
 		// jQuery Validation
 		"~/Scripts/jquery.unobtrusive-ajax.js",
 		"~/Scripts/jquery.validate.js",
@@ -76,15 +79,13 @@
 		jsRoot + "jquery.scrollTo.js",
 		jsRoot + "smartstore.globalize.adapter.js",
 		jsRoot + "offcanvas.js",
-		jsRoot + "hammer.js",
-		jsRoot + "jquery.hammer.js",
 
 		// Shop
 		jsRoot + "public.common.js",
 		jsRoot + "public.offcanvas-cart.js",
 		jsRoot + "public.product-detail-2.js", // TODO: (mc) Remove public.product-detail.js once work is finished
 		jsRoot + "public.product-filter.js",
-        jsRoot + "public.offcanvas-menu.js");
+		jsRoot + "public.offcanvas-menu.js");
 }
 <!DOCTYPE html>
 <html lang="@this.WorkContext.WorkingLanguage.UniqueSeoCode">
