--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasCart.cshtml
@@ -13,7 +13,7 @@
         </button>
     </div>
 
-    <ul class="nav nav-tabs nav-tabs-line row no-space flex-nowrap" role="tablist">
+    <ul class="nav nav-tabs nav-tabs-line row no-gutters flex-nowrap" role="tablist">
         @if (Model.ShoppingCartEnabled) 
         {
             <li class="nav-item col-xs">
