--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OffCanvasWishlist.cshtml
@@ -42,7 +42,7 @@
 			@foreach (var item in Model.Items)
             {
                 <div class="offcanvas-cart-item">
-                    <div class="row">
+                    <div class="row sm-gutters">
                         @if (Model.ShowProductImages)
                         {
                             <div class="col-xs col-alpha">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
 
-                    <div class="row m-t-05">
+                    <div class="row sm-gutters flex-wrap align-items-center m-t-05">
                         <div class="col-xs col-alpha">
                             @Html.EditorFor(x => item, "QtyInput",
                                 new { htmlAttributes = new { data_update_url = Url.Action("UpdateOcCartItem", "ShoppingCart"), data_type = "wishlist", data_sci_id = item.Id } })
@@ -103,8 +103,7 @@
                             </span>
                         </div>
 
-                        <div class="col-xs text-xs-right">
-
+                        <div class="ml-auto text-nowrap">
                             @if (Model.ShowItemsFromWishlistToCartButton)
                             {
                                 <a class="btn btn-secondary btn-sm btn-icon ajax-cart-link" title='@T("ShoppingCart.AddToCart")'
@@ -117,7 +116,6 @@
                                     <i class="fa fa-cart-arrow-down"></i>
                                 </a>
                             }
-
                             <a class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
                                 href="#"
                                 rel="nofollow"
